--- a/Siem/src/main/resources/application.properties
+++ b/Siem/src/main/resources/application.properties
@@ -7,3 +7,15 @@ server.ssl.trust-store=src\\main\\resources\\jks\\SiemServer.jks
 server.ssl.trust-store-password=password
 server.ssl.protocol=TLSv1.2
 server.ssl.client-auth=need
+spring.datasource.url = jdbc:mysql://localhost:3306/BSEP_DB?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username =root
+spring.datasource.password =root
+  #dogicralj<33
+spring.datasource.initialization-mode=always
+
+spring.datasource.platform=mysql
+spring.jpa.show-sql = true
+#kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi
+#sa radom dropuje ih
+#ako je baza aplikacije vec definisana
+spring.jpa.hibernate.ddl-auto=create
