--- a/Siem/pom.xml
+++ b/Siem/pom.xml
@@ -79,6 +79,11 @@
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
+        <dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20180813</version>
+		</dependency> 
 	</dependencies>
 
 	<build>
