--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,14 @@
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
     "@angular/material": "^7.3.7",
+    "@angular/material-moment-adapter": "^8.0.1",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "fontawesome": "^5.6.3",
+    "moment": "^2.24.0",
     "ngx-bootstrap": "^4.3.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
